hphp/test/zend/good/tests-classes/interface_class.php
<?php
class base {
}
	
class derived implements base {
}
?>